# FreeRTOS-CMake

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  tasks.c
